# arbipic

./: .env.example  .gitignore  Implementation.md  README.md
contracts/: Cargo.toml
contracts/.cargo/: config.toml
contracts/src/: lib.rs  main.rs
docs/: ORBIT_L3_DEPLOYMENT.md
frontend/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js  test-env.html
frontend/src/: App.tsx  config.ts  index.css
frontend/src/components/: EnvCheck.tsx  Header.tsx  NetworkSwitcher.tsx  PhotoCapture.tsx  PhotoCaptureEnhanced.tsx  VerifyPage.tsx
frontend/src/utils/: deviceMetadata.ts  eas.ts  exampleFlow.ts  initContract.ts  ipfs.ts  metadata.ts  verification.ts  zkProof.ts
scripts/: check.sh  deploy-enhanced.sh  deploy.sh
