[package]
name = "arbipic-verifier"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
alloy-primitives = "1.0.1"
alloy-sol-types = "1.0.1"
stylus-sdk = "0.10.0"

[dev-dependencies]
tokio = { version = "1.44", features = ["macros", "rt-multi-thread"] }

[features]
export-abi = ["stylus-sdk/export-abi"]

[lib]
crate-type = ["lib", "cdylib"]

[[bin]]
name = "arbipic-verifier"
path = "src/main.rs"

[profile.release]
codegen-units = 1
strip = true
lto = true
panic = "abort"
opt-level = "z"

[profile.dev]
panic = "abort"
